<?xml version="1.0"?>
<package format="2">
  <name>mynteye_ros_wrapper</name>
  <version>1.0.0</version>
  <description>mynteye_ros_wrapper is a ROS wrapper for the <a> href="www.slightech.com">mynt library</a>
    for interfacing with the mynt camera.
  </description>
  <maintainer email="mynteye@slightech.com">MYNTEYE</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
